small mistake in docs
